test with Bootstrap

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title> Daniel Keresteci - Internet Home</title>
 	</head>
 	<body>
-		<p> Hello, World </p>
+		<h1> Hello, World </h1>
+
+		<h2> Daniel Keresteci's Homepage <em> on the internet</em></h2>
 	</body>
 	</html>	
